tests/ui/crate_local_distributed_slice/no_crate.stderr
error: `#[distributed_slice]` must take one parameter `crate`
  --> $DIR/no_crate.rs:3:1
   |
LL | #[distributed_slice]
   | ^^^^^^^^^^^^^^^^^^^^
   |
help: add `crate`
   |
LL | #[distributed_slice(crate)]
   |                    +++++++

error: aborting due to 1 previous error

